--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/microservices": "^9.3.9",
     "@nestjs/platform-express": "^9.3.9",
     "@nestjs/swagger": "^6.2.1",
+    "@nestjs/typeorm": "^9.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "convict": "^6.2.4",
@@ -37,7 +38,8 @@
     "helmet": "^6.0.1",
     "ioredis": "^5.3.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "typeorm": "^0.3.12"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.2.0",
