--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This is a NestJS project that offers a streamlined, sophisticated, and well-structured codebase for beginning a fresh microservice initiative.",
   "author": "Mahdi Rashidi <m8rashidi@gmail.com>",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
