feat: add namespaces for each k8s environent

--- a/k8s/development/kustomization.yaml
+++ b/k8s/development/kustomization.yaml
@@ -1,6 +1,11 @@
 bases:
   - ../base
 
+namespace: nestifined-development
+
+resources:
+  - namespace.yaml
+
 patchesStrategicMerge:
   - deployment.yaml
 
