--- a/k8s/staging/kustomization.yaml
+++ b/k8s/staging/kustomization.yaml
@@ -1,6 +1,11 @@
 bases:
   - ../base
 
+namespace: nestifined-staging
+
+resources:
+  - namespace.yaml
+
 patchesStrategicMerge:
   - deployment.yaml
 
