feat: add secrets for each k8s env

--- a/k8s/development/kustomization.yaml
+++ b/k8s/development/kustomization.yaml
@@ -2,6 +2,7 @@ namespace: nestifined-development
 resources:
   - namespace.yaml
   - ../base
+  - secrets.yaml
 configMapGenerator:
   - name: nestifined-ms-framework-config
     behavior: merge
