--- a/k8s/staging/kustomization.yaml
+++ b/k8s/staging/kustomization.yaml
@@ -2,6 +2,7 @@ namespace: nestifined-staging
 resources:
   - namespace.yaml
   - ../base
+  - secrets.yaml
 configMapGenerator:
   - name: nestifined-ms-framework-config
     behavior: merge
