--- a/package.json
+++ b/package.json
@@ -4,6 +4,14 @@
   "description": "This is a NestJS project that offers a streamlined, sophisticated, and well-structured codebase for beginning a fresh microservice initiative.",
   "author": "Mahdi Rashidi <m8rashidi@gmail.com>",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/MRdevX/nestifined-ms-framework.git"
+  },
+  "bugs": {
+    "url": "https://github.com/MRdevX/nestifined-ms-framework/issues"
+  },
+  "homepage": "https://github.com/MRdevX/nestifined-ms-framework#readme",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
