--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "helmet": "^8.0.0",
     "ioredis": "^5.4.1",
     "joi": "^17.13.3",
+    "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20",
@@ -61,6 +62,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.8.2",
+    "@types/pg": "^8",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^8.12.2",
     "@typescript-eslint/parser": "^8.12.2",
