feat: add rabbitmq support

--- a/k8s/development/secrets.yaml
+++ b/k8s/development/secrets.yaml
@@ -19,3 +19,5 @@ data:
   RELEASE: 'MS4wLjA=' # base64 encoded '1.0.0'
   S2S_TRANSPORT: 'UkVESVM=' # base64 encoded 'REDIS'
   S2S_REDIS_URL: 'cmVkaXM6Ly9sb2NhbGhvc3Q6NjM3OQ==' # base64 encoded 'redis://localhost:6379'
+  S2S_RABBITMQ_URL: 'YW1xcDovL2xvY2FsaG9zdDo1Njcy' # base64 encoded 'amqp://localhost:5672'
+  S2S_RABBITMQ_QUEUE: 'bXlfcXVldWU=' # base64 encoded 'my_queue'
