--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@nestjs/platform-express": "^10.4.6",
     "@nestjs/swagger": "^8.0.1",
     "@nestjs/typeorm": "^10.0.2",
+    "amqp-connection-manager": "^4.1.14",
+    "amqplib": "^0.10.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
@@ -61,6 +63,7 @@
     "@nestjs/schematics": "^10.2.3",
     "@nestjs/testing": "^10.4.6",
     "@stylistic/eslint-plugin-js": "^2.9.0",
+    "@types/amqplib": "^0",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.8.2",
