--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@stylistic/eslint-plugin-js": "^2.9.0",
     "@types/amqplib": "^0.10.5",
     "@types/express": "^5.0.0",
+    "@types/ioredis-mock": "^8",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.8.4",
     "@types/pg": "^8.11.10",
@@ -75,7 +76,9 @@
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.1",
     "husky": "^9.1.6",
+    "ioredis-mock": "^8.9.0",
     "jest": "^29.7.0",
+    "jest-mock-extended": "^4.0.0-beta1",
     "lint-staged": "^15.2.10",
     "pinst": "^3.0.0",
     "prettier": "^3.3.3",
