--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "dotenv": "^17.2.1",
     "helmet": "^8.0.0",
     "ioredis": "^5.4.2",
+    "lodash": "^4.17.21",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
