--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
   },
   "homepage": "https://github.com/MRdevX/nestifined-ms-framework#readme",
   "scripts": {
-    "prebuild": "rimraf dist",
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "format": "biome format --write .",
+    "lint": "biome lint .",
+    "lint:fix": "biome lint --write .",
+    "check": "biome check .",
+    "check:fix": "biome check --write .",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -39,18 +41,23 @@
     "@nestjs/common": "^11.1.6",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.6",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/microservices": "^11.1.6",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.1.6",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.5",
+    "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^17.2.1",
     "helmet": "^8.0.0",
     "ioredis": "^5.4.2",
     "lodash": "^4.17.21",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
@@ -59,11 +66,11 @@
     "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.2.2",
     "@faker-js/faker": "^10.0.0",
     "@nestjs/cli": "^11.0.10",
     "@nestjs/schematics": "^11.0.7",
     "@nestjs/testing": "^11.1.6",
-    "@stylistic/eslint-plugin-js": "^4.4.1",
     "@types/amqplib": "^0.10.6",
     "@types/express": "^5.0.0",
     "@types/ioredis-mock": "^8.2.5",
@@ -71,19 +78,12 @@
     "@types/node": "^24.3.0",
     "@types/pg": "^8.11.10",
     "@types/supertest": "^6.0.2",
-    "@typescript-eslint/eslint-plugin": "^8.19.0",
-    "@typescript-eslint/parser": "^8.19.0",
-    "eslint": "^9.17.0",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-prettier": "^5.2.1",
     "husky": "^9.1.7",
     "ioredis-mock": "^8.9.0",
     "jest": "^30.1.1",
     "jest-mock-extended": "^4.0.0-beta1",
     "lint-staged": "^16.1.5",
     "pinst": "^3.0.0",
-    "prettier": "^3.4.2",
     "source-map-support": "^0.5.21",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
@@ -92,10 +92,8 @@
   },
   "lint-staged": {
     "*.{ts,js}": [
-      "eslint --fix"
-    ],
-    "*.js": "eslint --cache --fix",
-    "*.ts": "prettier --write"
+      "biome check --write"
+    ]
   },
   "jest": {
     "moduleNameMapper": {
