refactor(auth): auth and db structure and configs

--- a/.env-example
+++ b/.env-example
@@ -1,21 +1,32 @@
 # Application Configuration
 NODE_ENV=development
-APP_NAME=MyApp
+APP_NAME=NestifinedMSFramework
 HOST=127.0.0.1
 PORT=3000
 CORS=true
 API_PREFIX=api
 RELEASE=1.0.0
 
-# Sentry Configuration
-SENTRY_DSN=your_sentry_dsn
-
 # Database Configuration
 DB_HOST=localhost
 DB_PORT=5432
-DB_USERNAME=your_username
-DB_PASSWORD=your_password
-DB_NAME=your_database
+DB_USERNAME=postgres
+DB_PASSWORD=postgres
+DB_NAME=nestifined_ms_framework
+DB_TYPE=postgres
+DB_SYNCHRONIZE=true
+DB_MAX_CONNECTIONS=100
+
+# Redis Configuration (if needed)
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_DB=0
+
+# JWT Configuration
+JWT_SECRET=your-super-secret-jwt-key-change-in-production
+JWT_EXPIRES_IN=15m
+JWT_REFRESH_EXPIRES_IN=7d
 
 # S2S Configuration
 S2S_OPTION_1=value1
