--- a/biome.json
+++ b/biome.json
@@ -3,20 +3,11 @@
   "linter": {
     "enabled": true,
     "rules": {
-      "recommended": true,
       "correctness": {
-        "noUnusedVariables": {
-          "level": "error",
-          "options": {
-            "ignoreRestSiblings": true
-          }
-        }
-      },
-      "suspicious": {
-        "noExplicitAny": "warn"
+        "noUnusedFunctionParameters": "off"
       },
       "style": {
-        "useConst": "error"
+        "useImportType": "off"
       }
     }
   },
@@ -24,22 +15,14 @@
     "enabled": true,
     "indentStyle": "space",
     "indentWidth": 2,
-    "lineWidth": 120,
-    "lineEnding": "lf",
-    "formatWithErrors": true
+    "lineWidth": 120
   },
   "javascript": {
-    "formatter": {
-      "quoteStyle": "single",
-      "trailingCommas": "all",
-      "semicolons": "always"
-    },
     "parser": {
       "unsafeParameterDecoratorsEnabled": true
     }
   },
   "files": {
-    "ignoreUnknown": false,
     "includes": ["src/**/*", "test/**/*"]
   }
 }
