feat(pagination): add limit and offset parameters to search book DTOs and repository for improved pagination support

--- a/package.json
+++ b/package.json
@@ -95,6 +95,8 @@
   },
   "lint-staged": {
     "*.{ts,js}": [
+      "biome format --write",
+      "biome lint --write",
       "biome check --write"
     ]
   },
