--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "typeorm": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli.js --dataSource ./src/app/core/database/typeorm-config.service.ts",
     "migration:generate": "npm run typeorm migration:generate ./src/migrations/$npm_config_name --timestamp",
     "migration:run": "npm run typeorm -- migration:run",
-    "migration:revert": "npm run typeorm -- migration:revert"
+    "migration:revert": "npm run typeorm -- migration:revert",
+    "lint-staged": "lint-staged"
   },
   "dependencies": {
     "@nestjs/apollo": "^13.1.0",
@@ -95,7 +96,8 @@
   },
   "lint-staged": {
     "*.{ts,js}": [
-      "biome format --write"
+      "biome format --write",
+      "biome lint --write"
     ]
   },
   "jest": {
