fix(husky): update husky hooks to v10 format and fix biome configuration

--- a/biome.json
+++ b/biome.json
@@ -32,6 +32,6 @@
     }
   },
   "files": {
-    "includes": ["src/**/*", "test/**/*"]
+    "includes": ["src/**/*", "test/**/*", "*.js", "*.ts", "*.json"]
   }
 }
