--- a/package.json
+++ b/package.json
@@ -98,8 +98,7 @@
   },
   "lint-staged": {
     "*.{ts,js}": [
-      "biome format --write",
-      "biome lint --write"
+      "biome check --write"
     ],
     "*.json": [
       "biome format --write"
