--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "compression": "^1.8.1",
     "dotenv": "^17.2.3",
     "helmet": "^8.0.0",
     "ioredis": "^5.8.2",
@@ -75,6 +76,7 @@
     "@nestjs/schematics": "^11.0.9",
     "@nestjs/testing": "^11.1.7",
     "@types/amqplib": "^0.10.6",
+    "@types/compression": "^1.8.1",
     "@types/express": "^5.0.0",
     "@types/ioredis-mock": "^8.2.5",
     "@types/jest": "^30.0.0",
